# jupyterlab-slurm

./: .gitignore  README.md
python/: jupyter_config.json  pyproject.toml
python/jupyterlab_slurm/: __init__.py  handlers.py  ipython_ext.py
python/runs/: cell_run.sh
typescript/: package.json  tsconfig.json  webpack.config.js
typescript/src/: SlurmPanel.tsx  index.ts
