[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-slurm"
version = "0.1.0"
description = "A JupyterLab extension to submit and manage Slurm jobs"
authors = [{name = "demo", email = "demo@example.com"}]
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
  "jupyter_server>=2.0.0",
  "tornado>=6.2",
  "papermill>=2.5.0",
  "nbformat>=5.9.0",
  "pyyaml>=6.0",
  "requests>=2.31.0"
]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_slurm"]

[tool.hatch.build]
artifacts = ["jupyterlab_slurm/labextension/**"]
