[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-slurm"
version = "0.1.0"
description = "A JupyterLab server+lab extension to submit/monitor Slurm jobs"
requires-python = ">=3.9"
dependencies = [
  "jupyter_server>=2.0.0",
  "tornado>=6.2",
  "requests>=2.31.0",
  "nbformat>=5.9.0",
  "papermill>=2.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_slurm"]

[project.entry-points."jupyter_server.serverapp"]
jupyterlab-slurm = "jupyterlab_slurm"
